<resources>
    <string name="app_name">Акції для мене</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_add">Додати</string>
    <string name="action_refresh">Оновити</string>

    <string name="discounts_title">Акції</string>
    <string name="shops_title">Магазини</string>
    <string name="categories_title">Категорії</string>
    <string name="favorites_title">Улюблене</string>
    <string name="settings_title">Параметри</string>
    <string name="title_activity_shops">ShopsActivity</string>

    <string name="default_screen">Default screen</string>
    <string name="nearest_title">Шукати поблизу</string>

    <string name="item_discount_title">Назва акційної пропозиції</string>
    <string name="item_deadline_title">Дата закінчення</string>
    <string name="item_shop_title">Назва магазину</string>

    <string name="item_shop_name">Назва магазину</string>
    <string name="item_address_title">Адреса</string>

    <string name="settings_radius_title">Радіус пошуку \"найближчих\"</string>
    <string name="settings_radius_desc">Вкажіть радіус, в межах якого буде виконуватись пошук найближчих магазинів та акцій</string>
    <string name="settings_radius_value_title">Радіус:</string>
    <string name="settings_radius_unit">м</string>
    <string name="settings_radius_set_disclaimer">Радіус втстановлено</string>

    <string name="new_disc_name_title">Назва акційної пропозиції</string>
    <string name="new_disc_desc_title">Описання</string>
    <string name="new_disc_photo_title">Фото</string>
    <string name="new_disc_photobtn_title">Завантажити фото</string>
    <string name="new_disc_shop_title">Назва магазину</string>
    <string name="new_disc_send_btn">Відправити</string>
    <string name="title_activity_new_discount">Нова акція</string>
    <string name="title_activity_full_discount_info">FullDiscountInfoActivity</string>

    <string name="full_disc_info_title">FullDiscountInfoActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_map">Мапа</string>

    <string name="str_rb_driving">Авто</string>
    <string name="str_rb_bicycling">Велосипед</string>
    <string name="str_rb_walking">Пішки</string>
</resources>
