<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent"
    tools:context="alexiuscrow.diploma.activities.MapActivity"
    android:orientation="vertical">

    <RadioGroup
        android:id="@+id/rg_modes"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <RadioButton android:id="@+id/rb_driving"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_rb_driving"
            android:checked="true"
            android:layout_gravity="center" />

        <RadioButton android:id="@+id/rb_walking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_rb_walking"
            android:layout_gravity="center" />

        <RadioButton android:id="@+id/rb_bicycling"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_rb_bicycling"
            android:layout_gravity="center" />

    </RadioGroup>
    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center">
    </fragment>

</LinearLayout>
