<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="5dp"
    android:weightSum="1">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:id="@+id/scrollView" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/new_disc_name_title"
                android:id="@+id/tvNewDiscNameTitle" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etNewDiscName"
                android:inputType="textAutoComplete|text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/new_disc_desc_title"
                android:id="@+id/tvNewDiscDescTitle" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:inputType="textAutoComplete|textAutoCorrect|textMultiLine"
                android:ems="10"
                android:id="@+id/etNewDiscDesc" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/new_disc_photo_title"
                android:id="@+id/textView" />

            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageButton"
                    android:src="@drawable/ic_action_photo_camera"
                    android:background="@drawable/border_photo_upload"
                    android:layout_gravity="center"
                    android:paddingLeft="100dp"
                    android:paddingRight="100dp"
                    android:paddingTop="30dp"
                    android:paddingBottom="30dp"
                    android:layout_margin="2dp" />
            </FrameLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/new_disc_shop_title"
                android:id="@+id/tvNewDiscShopTitle" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etNewDiscShop"
                android:inputType="text" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>

